# Araneus

./: .env  .env.example  README.md  pyproject.toml
src/araneus/: cache.txt  dynamo_db_facade.py  main.py  notion_facade.py  prompt_scraper.py  uploader.py
src/araneus/Facades/: dynamo_db_facade.py
src/araneus/Handlers/: notion_upload_handler.py
src/araneus/WebScrapers/: prompt_retriever.py  web_page_retriever.py
